text overflow fixed

--- a/app/assets/stylesheets/api/mini_user_account_card.scss
+++ b/app/assets/stylesheets/api/mini_user_account_card.scss
@@ -332,6 +332,7 @@
     font-size: 14px;
     background-color: hsl(220, 6.8%, 17.3%);
     forced-color-adjust: none;
+    text-overflow: ellipsis;
 }
 
 
